--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 태영테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/FgauoPNN7/",
+    "modelUrl": "https:/https://teachablemachine.withgoogle.com/models/t0z5zrlWY/",
     "classDetails": [
         {
             "name": "강아지",
@@ -14,10 +14,10 @@
             "color": "rgba(27, 175, 234, 1)"
         },
         {
-            "name": "말",
-            "title": "말상",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
+            "name": "여우",
+            "title": "여우상",
+            "explain": "매혹적인 외모를 가진 당신! 머리 회전이 빠르고 임기응변이 대단해 상황판단이 빠르다. 또 어떤 모임에서든 금세 적응하고 친해지는 외향적인 성격을 가진 편이!",
+            "celeb": "여우상 연예인: 연준, 이도현, 육성재, 황민",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
@@ -26,6 +26,13 @@
             "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
             "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
             "color": "rgba(265, 100, 50, 1)"
+        },
+        {
+            "name": "햄스터",
+            "title": "햄스터상",
+            "explain": "동글동글한 얼굴형에 마치 햄스터처럼 귀여운 당신! 무엇을 해도 다 귀여워 보이는 당신은 사람들에게 이쁨 받는 성햐을 가지고 있다! 웅냥냥한 말투와 행동과 매번 먹을 것을 가지고 다니는 당신은 햄스터와 똑 닮았다!",
+            "celeb": "호시, 박보영, 김다미, 최우식, 우지",
+            "color": "rgba(300, 120, 40, 1)
         }
     ]
 }
