--- a/settings.json
+++ b/settings.json
@@ -32,7 +32,7 @@
             "title": "햄스터상",
             "explain": "동글동글한 얼굴형에 마치 햄스터처럼 귀여운 당신! 무엇을 해도 다 귀여워 보이는 당신은 사람들에게 이쁨 받는 성햐을 가지고 있다! 웅냥냥한 말투와 행동과 매번 먹을 것을 가지고 다니는 당신은 햄스터와 똑 닮았다!",
             "celeb": "호시, 박보영, 김다미, 최우식, 우지",
-            "color": "rgba(300, 120, 40, 1)
+            "color": "rgba(300, 120, 40, 1)"
         }
     ]
 }
