--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 콩농장 2024. All Rights Reserved.",
     
-    "modelUrl": "https:/https://teachablemachine.withgoogle.com/models/t0z5zrlWY/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/t0z5zrlWY/",
     "classDetails": [
         {
             "name": "강아지",
