--- a/settings.json
+++ b/settings.json
@@ -4,34 +4,30 @@
     "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
     "footerText": "&copy; 콩농장 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/t0z5zrlWY/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/",
     "classDetails": [
         {
-            "name": "강아지",
-            "title": "강아지상",
-            "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
-            "celeb": "강아지상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민",
+            "name": "한국인",
+            "title": "한국인상",
+            "explain": "안녕하세용",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
-            "name": "고양이",
-            "title": "고양이상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "name": "중국인",
+            "title": "중국인상",
+            "explain": "니하옹",
             "color": "rgba(15, 100, 50, 1)"
         },
         {
-             "name": "여우",
-            "title": "여우상",
-            "explain": "매혹적인 외모를 가진 당신! 머리 회전이 빠르고 임기응변이 대단해 상황판단이 빠르다. 또 어떤 모임에서든 금세 적응하고 친해지는 외향적인 성격을 가진 편이!",
-            "celeb": "여우상 연예인: 연준, 이도현, 육성재, 황민",
+             "name": "일본인",
+            "title": "일본인상",
+            "explain": "곤니치왕",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
-            "name": "햄스터",
-            "title": "햄스터상",
-            "explain": "동글동글한 얼굴형에 마치 햄스터처럼 귀여운 당신! 무엇을 해도 다 귀여워 보이는 당신은 사람들에게 이쁨 받는 성향을 가지고 있다! 웅냥냥한 말투와 행동과 매번 먹을 것을 가지고 다니는 당신은 햄스터와 똑 닮았다!",
-            "celeb": "호시, 박보영, 김다미, 최우식, 우지",
+            "name": "서양인",
+            "title": "서양인상",
+            "explain": "하잉",
             "color": "rgba(300, 120, 40, 1)"
         }
     ]
