--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
-    "mainTitle": "난 무슨 동물상일까",
-    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
+    "pageTitle": "국적 테스트",
+    "mainTitle": "난 어느 나라 사람일까",
+    "subtitle": "얼굴로 보는 인공지능 국적 테스트",
     "footerText": "&copy; 콩농장 2024. All Rights Reserved.",
     
     "modelUrl": "https://teachablemachine.withgoogle.com/models/",
